--- a/wasteagram/pubspec.yaml
+++ b/wasteagram/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   location: ^3.0.2
   http: ^0.12.2
   cloud_firestore: ^0.13.7
+  validators: ^2.0.1
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
