Resolved DB errors, can now upload data & images

--- a/wasteagram/pubspec.yaml
+++ b/wasteagram/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   http: ^0.12.2
   cloud_firestore: ^0.13.7
   validators: ^2.0.1
+  firebase_storage: ^3.1.6
 
 
   # The following adds the Cupertino Icons font to your application.
