--- a/wasteagram/pubspec.yaml
+++ b/wasteagram/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   cloud_firestore: ^0.13.7
   validators: ^2.0.1
   firebase_storage: ^3.1.6
-
+  geolocator: ^5.3.2+2
+  geoflutterfire: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
