--- a/wasteagram/pubspec.yaml
+++ b/wasteagram/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   firebase_storage: ^3.1.6
   geolocator: ^5.3.2+2
   geoflutterfire: ^2.1.0
+  firebase_crashlytics: ^0.1.4+1
+  flutter_crashlytics: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
