--- a/wasteagram/pubspec.yaml
+++ b/wasteagram/pubspec.yaml
@@ -35,7 +35,9 @@ dependencies:
   geoflutterfire: ^2.1.0
   firebase_crashlytics: ^0.1.4+1
   flutter_crashlytics: ^1.0.0
-
+  firebase_analytics: ^5.0.16
+  progress_dialog: ^1.0.4
+  firebase_core: ^0.4.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
